--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "vite": "^6.0.5"
   },
   "dependencies": {
-    "axios": "^1.7.9"
+    "@types/node": "^22.10.5",
+    "axios": "^1.7.9",
+    "path": "^0.12.7"
   }
 }
