--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "arcos",
+  "name": "deskwave",
   "private": true,
   "version": "7.0.0",
   "type": "module",
@@ -18,6 +18,7 @@
     "vite": "^6.0.5"
   },
   "dependencies": {
+    "@neodrag/vanilla": "^2.2.0",
     "@types/node": "^22.10.5",
     "axios": "^1.7.9",
     "path": "^0.12.7"
