--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^22.10.5",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "lucide-svelte": "^0.471.0",
     "path": "^0.12.7"
   }
 }
