--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "dependencies": {
     "@neodrag/vanilla": "^2.2.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/md5": "^2.3.5",
     "@types/node": "^22.10.5",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "lucide-svelte": "^0.471.0",
+    "md5": "^2.3.0",
     "path": "^0.12.7"
   }
 }
