--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "js-cookie": "^3.0.5",
     "lucide-svelte": "^0.471.0",
     "md5": "^2.3.0",
+    "openmeteo": "^1.1.4",
     "path": "^0.12.7"
   }
 }
