--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/md5": "^2.3.5",
     "@types/node": "^22.10.5",
     "axios": "^1.7.9",
+    "colorsea": "^1.2.2",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "lucide-svelte": "^0.471.0",
