--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,6 +21,7 @@
       "$apps/*": ["./src/apps/*"],
       "$css/*": ["./src/css/*"],
       "$types/*": ["./src/types/*"],
+      "$lib/*": ["./src/lib/*"],
       "$ts/*": ["./src/ts/*"]
     }
   },
