--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "dependencies": {
     "@neodrag/vanilla": "^2.2.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/jszip": "^3.4.1",
     "@types/md5": "^2.3.5",
     "@types/node": "^22.10.5",
     "axios": "^1.7.9",
     "colorsea": "^1.2.2",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
+    "jszip": "^3.10.1",
     "lucide-svelte": "^0.471.0",
     "md5": "^2.3.0",
     "openmeteo": "^1.1.4",
