--- a/package.json
+++ b/package.json
@@ -21,16 +21,20 @@
     "@neodrag/vanilla": "^2.2.0",
     "@types/js-cookie": "^3.0.6",
     "@types/jszip": "^3.4.1",
+    "@types/leo-profanity": "^1.5.4",
     "@types/md5": "^2.3.5",
     "@types/node": "^22.10.5",
+    "@types/validator": "^13.12.2",
     "axios": "^1.7.9",
     "colorsea": "^1.2.2",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "jszip": "^3.10.1",
+    "leo-profanity": "^1.7.0",
     "lucide-svelte": "^0.471.0",
     "md5": "^2.3.0",
     "openmeteo": "^1.1.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "validator": "^13.12.0"
   }
 }
