--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "check-password-strength": "^3.0.0",
     "colorsea": "^1.2.2",
     "dayjs": "^1.11.13",
+    "human-filetypes": "^1.1.3",
     "js-cookie": "^3.0.5",
     "jszip": "^3.10.1",
     "leo-profanity": "^1.7.0",
