--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "svelte": "^5.15.0",
     "svelte-check": "^4.1.1",
     "typescript": "~5.6.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "types": "npx tsc -p tsconfig.app.json --emitDeclarationOnly --declaration --outFile dist/types.d.ts --verbatimModuleSyntax false --isolatedModules false --removeComments"
   },
   "dependencies": {
     "@neodrag/svelte": "^2.3.1",
