Create terminal window

--- a/package.json
+++ b/package.json
@@ -26,7 +26,14 @@
     "@types/leo-profanity": "^1.5.4",
     "@types/md5": "^2.3.5",
     "@types/node": "^22.10.5",
+    "@types/shell-quote": "^1.7.5",
     "@types/validator": "^13.12.2",
+    "@xterm/addon-clipboard": "^0.1.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-image": "^0.8.0",
+    "@xterm/addon-unicode11": "^0.8.0",
+    "@xterm/addon-web-links": "^0.11.0",
+    "@xterm/xterm": "^5.5.0",
     "axios": "^1.7.9",
     "check-password-strength": "^3.0.0",
     "colorsea": "^1.2.2",
@@ -39,6 +46,7 @@
     "md5": "^2.3.0",
     "openmeteo": "^1.1.4",
     "path": "^0.12.7",
+    "shell-quote": "^1.8.2",
     "svelte-dnd-action": "^0.9.57",
     "svelte-pdf-simple": "^2.0.0",
     "validator": "^13.12.0"
