--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@neodrag/svelte": "^2.3.1",
     "@neodrag/vanilla": "^2.2.0",
+    "@types/ansi-escapes": "^4.0.4",
     "@types/js-cookie": "^3.0.6",
     "@types/jszip": "^3.4.1",
     "@types/leo-profanity": "^1.5.4",
@@ -34,6 +35,7 @@
     "@xterm/addon-unicode11": "^0.8.0",
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
+    "ansi-escapes": "^7.0.0",
     "axios": "^1.7.9",
     "check-password-strength": "^3.0.0",
     "colorsea": "^1.2.2",
@@ -49,6 +51,7 @@
     "shell-quote": "^1.8.2",
     "svelte-dnd-action": "^0.9.57",
     "svelte-pdf-simple": "^2.0.0",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "xterm": "^5.3.0"
   }
 }
