--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "svelte-dnd-action": "^0.9.57",
     "svelte-pdf-simple": "^2.0.0",
     "validator": "^13.12.0",
-    "xterm": "^5.3.0"
+    "xterm": "^5.3.0",
+    "xterm-readline": "^1.1.2"
   }
 }
