--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "svelte-pdf-simple": "^2.0.0",
     "validator": "^13.12.0",
     "xterm": "^5.3.0",
+    "xterm-addon-unicode11": "^0.6.0",
     "xterm-readline": "^1.1.2"
   }
 }
