--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/md5": "^2.3.5",
     "@types/node": "^22.10.5",
     "@types/shell-quote": "^1.7.5",
+    "@types/string-width": "^4.0.1",
     "@types/validator": "^13.12.2",
     "@xterm/addon-clipboard": "^0.1.0",
     "@xterm/addon-fit": "^0.10.0",
@@ -49,6 +50,7 @@
     "openmeteo": "^1.1.4",
     "path": "^0.12.7",
     "shell-quote": "^1.8.2",
+    "string-width": "^7.2.0",
     "svelte-dnd-action": "^0.9.57",
     "svelte-pdf-simple": "^2.0.0",
     "validator": "^13.12.0",
