--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vite": "^6.0.5"
   },
   "dependencies": {
+    "@castlenine/svelte-qrcode": "^2.3.0",
     "@neodrag/svelte": "^2.3.1",
     "@neodrag/vanilla": "^2.2.0",
     "@types/ansi-escapes": "^4.0.4",
