--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "colorsea": "^1.2.2",
     "dayjs": "^1.11.13",
     "fuse.js": "^7.1.0",
+    "generate-password-ts": "^1.6.5",
     "human-filetypes": "^1.1.3",
     "js-cookie": "^3.0.5",
     "jszip": "^3.10.1",
