--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@neodrag/svelte": "^2.3.1",
     "@neodrag/vanilla": "^2.2.0",
     "@types/ansi-escapes": "^4.0.4",
+    "@types/highlight.js": "^10.1.0",
     "@types/js-cookie": "^3.0.6",
     "@types/jszip": "^3.4.1",
     "@types/leo-profanity": "^1.5.4",
@@ -44,6 +45,7 @@
     "dayjs": "^1.11.13",
     "fuse.js": "^7.1.0",
     "generate-password-ts": "^1.6.5",
+    "highlight.js": "^11.11.1",
     "human-filetypes": "^1.1.3",
     "js-cookie": "^3.0.5",
     "jszip": "^3.10.1",
