Begin working on the message composer

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jszip": "^3.4.1",
     "@types/leo-profanity": "^1.5.4",
     "@types/md5": "^2.3.5",
+    "@types/mime": "^4.0.0",
     "@types/node": "^22.10.5",
     "@types/shell-quote": "^1.7.5",
     "@types/string-width": "^4.0.1",
@@ -51,6 +52,7 @@
     "jszip": "^3.10.1",
     "leo-profanity": "^1.7.0",
     "md5": "^2.3.0",
+    "mime": "^4.0.7",
     "openmeteo": "^1.1.4",
     "path": "^0.12.7",
     "shell-quote": "^1.8.2",
