--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "string-width": "^7.2.0",
     "svelte-dnd-action": "^0.9.57",
     "svelte-pdf-simple": "^2.0.0",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-preset-fire": "^2.12.0",
     "validator": "^13.12.0",
     "xterm": "^5.3.0",
     "xterm-addon-unicode11": "^0.6.0",
