--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "openmeteo": "^1.1.4",
     "path": "^0.12.7",
     "shell-quote": "^1.8.2",
+    "socket.io-client": "^4.8.1",
     "string-width": "^7.2.0",
     "svelte-dnd-action": "^0.9.57",
     "svelte-pdf-simple": "^2.0.0",
