--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@xterm/xterm": "^5.5.0",
     "ansi-escapes": "^7.0.0",
     "axios": "^1.7.9",
+    "carta-md": "^4.9.0",
     "check-password-strength": "^3.0.0",
     "colorsea": "^1.2.2",
     "dayjs": "^1.11.13",
