--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "socket.io-client": "^4.8.1",
     "string-width": "^7.2.0",
     "svelte-dnd-action": "^0.9.57",
+    "svelte-markdown": "^0.4.1",
     "svelte-pdf-simple": "^2.0.0",
     "tsparticles-engine": "^2.12.0",
     "tsparticles-preset-fire": "^2.12.0",
