--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@xterm/xterm": "^5.5.0",
     "ansi-escapes": "^7.0.0",
     "axios": "^1.7.9",
-    "carta-md": "^4.9.0",
     "check-password-strength": "^3.0.0",
     "colorsea": "^1.2.2",
     "dayjs": "^1.11.13",
@@ -60,6 +59,7 @@
     "socket.io-client": "^4.8.1",
     "string-width": "^7.2.0",
     "svelte-dnd-action": "^0.9.57",
+    "svelte-markdown": "^0.4.1",
     "svelte-pdf-simple": "^2.0.0",
     "tsparticles-engine": "^2.12.0",
     "tsparticles-preset-fire": "^2.12.0",
