--- a/package.json
+++ b/package.json
@@ -53,11 +53,13 @@
     "generate-password-ts": "^1.6.5",
     "highlight.js": "^11.11.1",
     "human-filetypes": "^1.1.3",
+    "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "jszip": "^3.10.1",
     "leo-profanity": "^1.7.0",
     "md5": "^2.3.0",
     "mime": "^4.0.7",
+    "npm": "^11.4.1",
     "openmeteo": "^1.1.4",
     "path": "^0.12.7",
     "shell-quote": "^1.8.2",
@@ -69,6 +71,7 @@
     "ts-node": "^10.9.2",
     "tsparticles-engine": "^2.12.0",
     "tsparticles-preset-fire": "^2.12.0",
+    "ua-parser-js": "^2.0.3",
     "validator": "^13.12.0",
     "xterm": "^5.3.0",
     "xterm-addon-unicode11": "^0.6.0",
