admin stuff and safari compatibility

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "human-filetypes": "^1.1.3",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
+    "js-sha256": "^0.11.1",
     "jszip": "^3.10.1",
     "leo-profanity": "^1.7.0",
     "md5": "^2.3.0",
