Optimize dependencies & building

--- a/package.json
+++ b/package.json
@@ -10,16 +10,13 @@
     "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json",
     "build:types": "tsc -p tsconfig.app.json --emitDeclarationOnly --declaration --outFile dist/types.d.ts --verbatimModuleSyntax false --isolatedModules false --removeComments",
     "build:globals": "node tools/build-globals.mjs && node tools/convert-global.mjs",
-    "build:types:all": "npm run build:types && npm run build:globals",
-    "docs": "npx typedoc --plugin typedoc-plugin-markdown --name \"ArcOS v7\" --entryPointStrategy Expand src"
+    "build:types:all": "npm run build:types && npm run build:globals"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tsconfig/svelte": "^5.0.4",
     "svelte": "^5.15.0",
     "svelte-check": "^4.1.1",
-    "typedoc": "^0.28.4",
-    "typedoc-plugin-markdown": "^4.6.3",
     "typescript": "^5.8.3",
     "vite": "^6.0.5"
   },
@@ -27,6 +24,8 @@
     "@castlenine/svelte-qrcode": "^2.3.0",
     "@neodrag/svelte": "^2.3.1",
     "@neodrag/vanilla": "^2.2.0",
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/preset-fire": "^3.2.0",
     "@types/ansi-escapes": "^4.0.4",
     "@types/highlight.js": "^10.1.0",
     "@types/js-cookie": "^3.0.6",
@@ -35,7 +34,6 @@
     "@types/md5": "^2.3.5",
     "@types/mime": "^4.0.0",
     "@types/node": "^22.10.5",
-    "@types/shell-quote": "^1.7.5",
     "@types/string-width": "^4.0.1",
     "@types/validator": "^13.12.2",
     "@xterm/addon-clipboard": "^0.1.0",
@@ -53,27 +51,17 @@
     "generate-password-ts": "^1.6.5",
     "highlight.js": "^11.11.1",
     "human-filetypes": "^1.1.3",
-    "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "js-sha256": "^0.11.1",
     "jszip": "^3.10.1",
     "leo-profanity": "^1.7.0",
-    "md5": "^2.3.0",
     "mime": "^4.0.7",
-    "npm": "^11.4.1",
     "openmeteo": "^1.1.4",
-    "path": "^0.12.7",
-    "shell-quote": "^1.8.2",
     "socket.io-client": "^4.8.1",
     "stacktrace-parser": "^0.1.11",
     "string-width": "^7.2.0",
-    "svelte-dnd-action": "^0.9.57",
     "svelte-markdown": "^0.4.1",
     "svelte-navigator": "^3.2.2",
-    "svelte-pdf-simple": "^2.0.0",
-    "ts-node": "^10.9.2",
-    "tsparticles-engine": "^2.12.0",
-    "tsparticles-preset-fire": "^2.12.0",
     "ua-parser-js": "^2.0.3",
     "validator": "^13.12.0",
     "xterm": "^5.3.0",
