Some extent of SQL testing

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/md5": "^2.3.5",
     "@types/mime": "^4.0.0",
     "@types/node": "^22.10.5",
+    "@types/sql.js": "^1.4.9",
     "@types/string-width": "^4.0.1",
     "@types/validator": "^13.12.2",
     "@xterm/addon-clipboard": "^0.1.0",
@@ -58,6 +59,7 @@
     "mime": "^4.0.7",
     "openmeteo": "^1.1.4",
     "socket.io-client": "^4.8.1",
+    "sql.js": "^1.13.0",
     "stacktrace-parser": "^0.1.11",
     "string-width": "^7.2.0",
     "svelte-markdown": "^0.4.1",
