--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tsconfig/svelte": "^5.0.4",
-    "svelte": "^5.15.0",
+    "svelte": "5.25.3",
     "svelte-check": "^4.1.1",
     "typescript": "^5.8.3",
     "vite": "^6.0.5"
