--- a/package.json
+++ b/package.json
@@ -13,62 +13,62 @@
     "build:types:all": "npm run build:types && npm run build:globals"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tsconfig/svelte": "^5.0.4",
+    "@sveltejs/vite-plugin-svelte": "5.1.1",
+    "@tsconfig/svelte": "5.0.5",
     "svelte": "5.25.3",
-    "svelte-check": "^4.1.1",
-    "typescript": "^5.8.3",
-    "vite": "^6.0.5"
+    "svelte-check": "4.3.1",
+    "typescript": "5.9.2",
+    "vite": "6.3.5"
   },
   "dependencies": {
-    "@castlenine/svelte-qrcode": "^2.3.0",
-    "@neodrag/svelte": "^2.3.1",
+    "@castlenine/svelte-qrcode": "2.3.0",
+    "@neodrag/svelte": "2.3.3",
     "@neodrag/vanilla": "2.3.0",
-    "@tsparticles/engine": "^3.9.1",
-    "@tsparticles/preset-fire": "^3.2.0",
-    "@types/ansi-escapes": "^4.0.4",
-    "@types/highlight.js": "^10.1.0",
-    "@types/js-cookie": "^3.0.6",
-    "@types/jszip": "^3.4.1",
-    "@types/leo-profanity": "^1.5.4",
-    "@types/md5": "^2.3.5",
-    "@types/mime": "^4.0.0",
-    "@types/node": "^22.10.5",
-    "@types/sql.js": "^1.4.9",
-    "@types/string-width": "^4.0.1",
-    "@types/validator": "^13.12.2",
-    "@xterm/addon-clipboard": "^0.1.0",
-    "@xterm/addon-fit": "^0.10.0",
-    "@xterm/addon-image": "^0.8.0",
-    "@xterm/addon-unicode11": "^0.8.0",
-    "@xterm/addon-web-links": "^0.11.0",
-    "@xterm/xterm": "^5.5.0",
-    "ansi-escapes": "^7.0.0",
-    "axios": "^1.7.9",
-    "check-password-strength": "^3.0.0",
-    "colorsea": "^1.2.2",
-    "dayjs": "^1.11.13",
-    "fuse.js": "^7.1.0",
-    "generate-password-ts": "^1.6.5",
-    "highlight.js": "^11.11.1",
-    "human-filetypes": "^1.1.3",
-    "js-cookie": "^3.0.5",
-    "js-sha256": "^0.11.1",
-    "jszip": "^3.10.1",
-    "leo-profanity": "^1.7.0",
-    "mime": "^4.0.7",
-    "openmeteo": "^1.1.4",
-    "socket.io-client": "^4.8.1",
-    "sql.js": "^1.13.0",
-    "stacktrace-parser": "^0.1.11",
-    "string-width": "^7.2.0",
-    "svelte-markdown": "^0.4.1",
-    "svelte-navigator": "^3.2.2",
-    "svelte-splitpanes": "^8.0.9",
-    "ua-parser-js": "^2.0.3",
-    "validator": "^13.12.0",
-    "xterm": "^5.3.0",
-    "xterm-addon-unicode11": "^0.6.0",
-    "xterm-readline": "^1.1.2"
+    "@tsparticles/engine": "3.9.1",
+    "@tsparticles/preset-fire": "3.2.0",
+    "@types/ansi-escapes": "4.0.4",
+    "@types/highlight.js": "10.1.0",
+    "@types/js-cookie": "3.0.6",
+    "@types/jszip": "3.4.1",
+    "@types/leo-profanity": "1.5.4",
+    "@types/md5": "2.3.5",
+    "@types/mime": "4.0.0",
+    "@types/node": "24.3.1",
+    "@types/sql.js": "1.4.9",
+    "@types/string-width": "4.0.1",
+    "@types/validator": "13.15.3",
+    "@xterm/addon-clipboard": "0.1.0",
+    "@xterm/addon-fit": "0.10.0",
+    "@xterm/addon-image": "0.8.0",
+    "@xterm/addon-unicode11": "0.8.0",
+    "@xterm/addon-web-links": "0.11.0",
+    "@xterm/xterm": "5.5.0",
+    "ansi-escapes": "7.0.0",
+    "axios": "1.11.0",
+    "check-password-strength": "3.0.0",
+    "colorsea": "1.2.2",
+    "dayjs": "1.11.13",
+    "fuse.js": "7.1.0",
+    "generate-password-ts": "1.6.5",
+    "highlight.js": "11.11.1",
+    "human-filetypes": "1.1.6",
+    "js-cookie": "3.0.5",
+    "js-sha256": "0.11.1",
+    "jszip": "3.10.1",
+    "leo-profanity": "1.8.0",
+    "mime": "4.0.7",
+    "openmeteo": "1.2.0",
+    "socket.io-client": "4.8.1",
+    "sql.js": "1.13.0",
+    "stacktrace-parser": "0.1.11",
+    "string-width": "4.2.3",
+    "svelte-markdown": "0.4.1",
+    "svelte-navigator": "3.2.2",
+    "svelte-splitpanes": "8.0.9",
+    "ua-parser-js": "2.0.4",
+    "validator": "13.15.15",
+    "xterm": "5.3.0",
+    "xterm-addon-unicode11": "0.6.0",
+    "xterm-readline": "1.1.2"
   }
 }
