--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,8 @@ name: Build test
 on:
   pull_request:
     branches: [main] # or whatever branch you protect
+  workflow_dispatch:
+    branches: [main]
 
 jobs:
   build:
