Workflows: force build test npm install

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,6 @@ jobs:
           node-version: 20
           cache: npm
 
-      - run: npm install
+      - run: npm install --force
       - run: npm ci
       - run: npm run build
