--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:globals": "node tools/build-globals.mjs && node tools/convert-global.mjs",
     "build:types:all": "npm run build:types && npm run build:globals",
     "format:check": "prettier --check ./src",
-    "region:check": "node tools/validate-regions.mjs"
+    "region:check": "node tools/validate-regions.mjs",
+    "console:check": "node tools/console-usage.mjs"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "5.1.0",
