Update format and svelte workflows to run on commits

--- a/.github/workflows/svelte.yml
+++ b/.github/workflows/svelte.yml
@@ -5,6 +5,8 @@ on:
     branches: [main] # or whatever branch you protect
   workflow_dispatch:
     branches: [main]
+  commit:
+    branches: [main]
 
 jobs:
   sveltecheck:
