Continue isolating kernel i/o from the rest of the codebase

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:types:all": "npm run build:types && npm run build:globals",
     "region:check": "node tools/validate-regions.mjs",
     "console:check": "node tools/console-usage.mjs",
-    "check:everything": "yarn run check && yarn format:check && yarn console:check && yarn region:check"
+    "check:everything": "yarn run check && yarn console:check && yarn region:check"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "5.1.0",
