--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "svelte-splitpanes": "^8.0.9",
     "ua-parser-js": "^2.0.3",
     "validator": "^13.12.0",
+    "vite-plugin-no-bundle": "^4.0.0",
     "xterm": "^5.3.0",
     "xterm-addon-unicode11": "^0.6.0",
     "xterm-readline": "^1.1.2"
