--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "5.1.0",
     "@tsconfig/svelte": "5.0.4",
+    "@types/gapi": "^0.0.47",
+    "@types/gapi.auth2": "^0.0.61",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
     "svelte": "5.33.14",
@@ -58,6 +60,8 @@
     "dayjs": "^1.11.13",
     "fuse.js": "^7.1.0",
     "generate-password-ts": "^1.6.5",
+    "google-auth-library": "^10.3.0",
+    "googleapis": "^160.0.0",
     "highlight.js": "^11.11.1",
     "human-filetypes": "^1.1.3",
     "js-cookie": "^3.0.5",
