--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/preset-fire": "^3.2.0",
     "@types/ansi-escapes": "^4.0.4",
+    "@types/gapi.client.drive": "^3.0.15",
     "@types/highlight.js": "^10.1.0",
     "@types/js-cookie": "^3.0.6",
     "@types/jszip": "^3.4.1",
@@ -59,9 +60,8 @@
     "colorsea": "^1.2.2",
     "dayjs": "^1.11.13",
     "fuse.js": "^7.1.0",
+    "gapi-script": "^1.2.0",
     "generate-password-ts": "^1.6.5",
-    "google-auth-library": "^10.3.0",
-    "googleapis": "^160.0.0",
     "highlight.js": "^11.11.1",
     "human-filetypes": "^1.1.3",
     "js-cookie": "^3.0.5",
