--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@tsconfig/svelte": "5.0.4",
     "@types/gapi": "^0.0.47",
     "@types/gapi.auth2": "^0.0.61",
+    "@types/madge": "^5.0.3",
+    "fast-glob": "^3.3.3",
+    "madge": "^8.0.0",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
     "svelte": "5.33.14",
