--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "fuse.js": "^7.1.0",
     "gapi-script": "^1.2.0",
     "generate-password-ts": "^1.6.5",
+    "glob": "^11.0.3",
     "highlight.js": "^11.11.1",
     "human-filetypes": "^1.1.3",
     "js-cookie": "^3.0.5",
