Begin working on some kind of i18n implementation

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,7 +22,8 @@
       "$css/*": ["./src/css/*"],
       "$types/*": ["./src/types/*"],
       "$lib/*": ["./src/lib/*"],
-      "$ts/*": ["./src/ts/*"]
+      "$ts/*": ["./src/ts/*"],
+      "$lang/*": ["./src/lang/*"]
     },
     "esModuleInterop": true
   },
