--- a/.github/workflows/previews.yml
+++ b/.github/workflows/previews.yml
@@ -25,9 +25,17 @@ jobs:
       - name: Upload build to server
         uses: appleboy/scp-action@v0.1.7
         with:
-          host: ${{ secrets.DEPLOY_HOST }}
-          username: ${{ secrets.DEPLOY_USER }}
-          key: ${{ secrets.DEPLOY_KEY }}
+          host: "84.25.42.134"
+          username: "deploy"
+          key: |
+            -----BEGIN OPENSSH PRIVATE KEY-----
+            b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAMwAAAAtzc2gtZW
+            QyNTUxOQAAACC3nIFpo/b+t/9cEeu/TdOm5WZlHdQxXpL4Ha27iR9QywAAAKDq7a8T6u2v
+            EwAAAAtzc2gtZWQyNTUxOQAAACC3nIFpo/b+t/9cEeu/TdOm5WZlHdQxXpL4Ha27iR9Qyw
+            AAAEDQYWbAzjpd9qyjZik09pYevcdpQdU7UfLC6Ca5G+4TMbecgWmj9v63/1wR679N06bl
+            ZmUd1DFekvgdrbuJH1DLAAAAGGRlcGxveUBwcmV2aWV3LmFyY3dlYi5ubAECAwQF
+            -----END OPENSSH PRIVATE KEY-----
+            
           port: 28
           source: "dist/*"
           target: "/home/izaak/ArcOS/v7previews/${{ github.head_ref }}/"
