--- a/.github/workflows/previews.yml
+++ b/.github/workflows/previews.yml
@@ -25,17 +25,16 @@ jobs:
       - name: Upload build to server
         uses: appleboy/scp-action@v0.1.7
         with:
-          host: "84.25.42.134"
+          host: "62.171.184.106"
           username: "deploy"
           key: |
             -----BEGIN OPENSSH PRIVATE KEY-----
             b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAMwAAAAtzc2gtZW
-            QyNTUxOQAAACC3nIFpo/b+t/9cEeu/TdOm5WZlHdQxXpL4Ha27iR9QywAAAKDq7a8T6u2v
-            EwAAAAtzc2gtZWQyNTUxOQAAACC3nIFpo/b+t/9cEeu/TdOm5WZlHdQxXpL4Ha27iR9Qyw
-            AAAEDQYWbAzjpd9qyjZik09pYevcdpQdU7UfLC6Ca5G+4TMbecgWmj9v63/1wR679N06bl
-            ZmUd1DFekvgdrbuJH1DLAAAAGGRlcGxveUBwcmV2aWV3LmFyY3dlYi5ubAECAwQF
+            QyNTUxOQAAACBtBBl56BnT/9yIK91YsuwwZD6M2o+1VoIxWPkS7xSyqQAAAKD8u48e/LuP
+            HgAAAAtzc2gtZWQyNTUxOQAAACBtBBl56BnT/9yIK91YsuwwZD6M2o+1VoIxWPkS7xSyqQ
+            AAAEDNhg/XnRG5d+K7QNMZkLDsUxkceMttrqkBnytqtJXO/G0EGXnoGdP/3Igr3Viy7DBk
+            Pozaj7VWgjFY+RLvFLKpAAAAGGRlcGxveUBwcmV2aWV3LmFyY3dlYi5ubAECAwQF
             -----END OPENSSH PRIVATE KEY-----
             
-          port: 28
           source: "dist/*"
-          target: "/home/izaak/ArcOS/v7previews/${{ github.head_ref }}/"
+          target: "/var/www/previews/${{ github.head_ref }}/"
