--- a/.github/workflows/previews.yml
+++ b/.github/workflows/previews.yml
@@ -36,5 +36,5 @@ jobs:
             Pozaj7VWgjFY+RLvFLKpAAAAGGRlcGxveUBwcmV2aWV3LmFyY3dlYi5ubAECAwQF
             -----END OPENSSH PRIVATE KEY-----
             
-          source: "dist/*"
+          source: "dist/."
           target: "/var/www/previews/${{ github.head_ref }}/"
