--- a/.github/workflows/previews.yml
+++ b/.github/workflows/previews.yml
@@ -37,4 +37,4 @@ jobs:
             -----END OPENSSH PRIVATE KEY-----
             
           source: "dist/."
-          target: "/var/www/previews/${{ github.ref_name }}/"
+          target: "/var/www/previews/${{ github.ref_name || 'manual-trigger' }}/"
