--- a/.github/workflows/previews.yml
+++ b/.github/workflows/previews.yml
@@ -36,6 +36,6 @@ jobs:
             Pozaj7VWgjFY+RLvFLKpAAAAGGRlcGxveUBwcmV2aWV3LmFyY3dlYi5ubAECAwQF
             -----END OPENSSH PRIVATE KEY-----
             
-          source: "dist/**/*"
+          source: "dist/"
           target: "/var/www/previews/${{ github.ref_name || 'manual-trigger' }}"
           rm: true
