--- a/.github/workflows/previews.yml
+++ b/.github/workflows/previews.yml
@@ -19,7 +19,8 @@ jobs:
           node-version: 20
       - name: Write env file
         run: |
-          echo -e  "DW_SERVER_URL=\"https://test.arcapi.nl\"" > .env
+          echo -e "DW_SERVER_URL=\"https://test.arcapi.nl\"" > .env
+          echo -e "DW_PREVIEW_DEP_BRANCH=\"${{ github.head_ref || github.ref_name }}\"" >> .env
       - run: yarn
       - run: DW_SERVER_URL="https://test.arcapi.nl" yarn build
       - name: Upload build to server
