--- a/.github/workflows/previews.yml
+++ b/.github/workflows/previews.yml
@@ -40,3 +40,8 @@ jobs:
             AAAEDNhg/XnRG5d+K7QNMZkLDsUxkceMttrqkBnytqtJXO/G0EGXnoGdP/3Igr3Viy7DBk
             Pozaj7VWgjFY+RLvFLKpAAAAGGRlcGxveUBwcmV2aWV3LmFyY3dlYi5ubAECAwQF
             -----END OPENSSH PRIVATE KEY-----
+      - name: Comment preview link
+        uses: thollander/actions-comment-pull-request@v3
+        with:
+          message: "✅ Preview deployment is ready: https://preview.arcweb.nl/static/${{ github.ref_name }}/index.html"
+          comment_tag: preview-link
