--- a/.github/workflows/previews.yml
+++ b/.github/workflows/previews.yml
@@ -1,5 +1,7 @@
 name: Deploy Preview
-
+permissions: 
+   pull-requests: write 
+   
 on:
   pull_request:
     types: [opened, synchronize, reopened]
