--- a/.github/workflows/previews.yml
+++ b/.github/workflows/previews.yml
@@ -46,4 +46,4 @@ jobs:
       - name: Comment preview link
         uses: thollander/actions-comment-pull-request@v3
         with:
-          message: "✅ Preview deployment is ready: https://preview.arcweb.nl/static/${{ github.ref_name }}/index.html"
+          message: "✅ Preview deployment is ready: https://preview.arcweb.nl/static/${{ github.head_ref }}/index.html"
