--- a/.github/workflows/previews.yml
+++ b/.github/workflows/previews.yml
@@ -49,4 +49,4 @@ jobs:
         if: ${{ github.event_name == 'pull_request' }}
         uses: thollander/actions-comment-pull-request@v3
         with:
-          message: "✅ Preview deployment is ready: https://preview.arcweb.nl/static/${{ github.head_ref }}/index.html"
+          message: "✅ Preview deployment is ready: https://team.arcweb.nl/${{ github.head_ref }}"
