--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -26,3 +26,5 @@ jobs:
         run: yarn console:check
       - name: Check lifecycle regions
         run: yarn region:check
+      - name: Check method count
+        run: yarn method:check
