--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "@xterm/addon-unicode11": "^0.8.0",
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
+    "acorn": "^8.15.0",
+    "acorn-walk": "^8.3.4",
     "ansi-escapes": "^7.0.0",
     "axios": "^1.7.9",
     "check-password-strength": "^3.0.0",
