--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "jszip": "^3.10.1",
     "leo-profanity": "^1.7.0",
     "mime": "^4.0.7",
+    "music-metadata": "^11.10.3",
     "openmeteo": "^1.1.4",
     "socket.io-client": "^4.8.1",
     "sql.js": "^1.13.0",
