--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -28,3 +28,5 @@ jobs:
         run: yarn region:check
       - name: Check method count
         run: yarn method:check
+      - name: Check type blowout
+        run: yarn type:check
