Workflow updates, delete issue templates

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -2,9 +2,9 @@ name: Format check
 
 on:
   pull_request:
-    branches: [main] # or whatever branch you protect
+    branches: [development, main, beta] # or whatever branch you protect
   workflow_dispatch:
-    branches: [main]
+    branches: [development, main, beta]
   push:
     branches: [main]
 
