--- a/.github/workflows/previews.yml
+++ b/.github/workflows/previews.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
   workflow_dispatch:
-    branches: [main]
+    branches: [main, development, beta]
   push:
     branches: [main]
 
